# SkipperSite

./: .gitignore  Cargo.toml  package-lock.json  package.json  test.bash
directtransfer/: Cargo.toml
directtransfer/src/: help.rs  lib.rs  main.rs  settings.rs
directtransfer/src/transfer/: host.rs  leech.rs  mod.rs
directtransfer_client/: Cargo.toml  build.rs
serverenv/: Cargo.toml  run_update_loop.bash  startup.bash  update_run.bash
serverenv/server/: chat.js  db.js  db.ts  package-lock.json  package.json  server.js  server.ts
serverenv/server/public/: Chat.html  Homepage.html  Login.html
serverenv/server/public/static/: chat.js  login.js  shared.js  style.css
serverenv/server/server_modules/chat_app/: db.ts  dbOLD.js  db_types.ts  index.ts
serverenv/server/server_modules/chat_app/chat/: index.ts
serverenv/server/server_modules/chat_app/login/: index.ts
serverenv/server/static/: global_styles.css
serverenv/server/views/home/: index.html  scripts.js  styles.css  sub_server.ts
serverenv/server/views/projekter/chat_app/: index.html  scripts.js
serverenv/server/views/projekter/directtransfer/: index.html
serverenv/server/views/projekter/selvlaerende_spil/: styles.css
serverenv/server/views/projekter/selvlærende_biler/: index.html  styles.css
serverenv/server/views/projekter/selvlærende_spil/: index.html
serverenv/serverOld/: package.json
serverenv/serverOld/public/static/: chat.js  login.js  luksus.html  style.css
serverenv/src/: main.rs
serverenv/src/control/: commands.rs  loops.rs  mod.rs
serverenv/sub/linux/: torrtransfer2
(+21 files in other folders)
