[package]
name = "directtransfer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.0"
serde = { version = "1.0", features = ["derive"] }
walkdir = "2"
ipconfig = "0.3.0"
byteorder = "1.4.3"
local-ip-address = "0.4.4"