[package]
name = "serverenv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.15.0", features = ["full"] }
deadqueue = "0.2.0"
async-std = "1.10.0"
ipconfig = "0.3.0"
local-ip-address = "0.4.4"
directtransfer = {path = "../directtransfer"}
once_cell = "1.9.0"
futures = "0.3.19"
chrono = "*"